--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "build": "turbo run build",
     "dev": "turbo run dev --no-cache --parallel --continue",
     "clean": "turbo run clean && rm -rf node_modules",
+    "lint": "eslint . --ext .js,.ts,.json,.json5,.vue,.md --fix",
     "changeset": "changeset",
     "version": "changeset version",
     "release": "changeset publish"
@@ -33,6 +34,10 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.7",
     "@changesets/cli": "^2.25.0",
+    "@sawn/eslint-config": "workspace:*",
+    "@sawn/prettier-config": "workspace:*",
+    "eslint": "^8.26.0",
+    "prettier": "^2.7.1",
     "turbo": "^1.5.6"
   },
   "engines": {
